# tell

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.azure  README.md  docker-compose.yml  index.html  loki-config.yml  package.json  prometheus.yml  promtail-config.yml  test-frontend-request.html
bench/py-baseline/src/: server.py
notes/: why-Rust.md
notes/inference-example/: Cargo.toml  README.md  simple_model.pt
notes/inference-example/src/: main.rs
sidecar(ai-sdk)/: .env.example  model-pricing.js  sidecar.js  supabase.js
src/: main.rs
supabase/: init.sql  nodemon.json  package.json  tsconfig.json
supabase/src/: server.ts  supabase.ts
supabase/src/middleware/: auth.ts
supabase/src/utils/: cost.ts
tests/: cors_test.html
